syntax = "proto3";

package api.note_v1;

option go_package = "github.com/markgenuine/note-service-api/pkg/note_v1";

service NoteService {
  rpc CreateNote(CreateNoteRequest) returns (CreateNoteResponse);
  rpc GetNote(GetNoteRequest) returns (GetNoteResponse);
  rpc GetListNote(GetListNoteRequest) returns (GetListNoteResponse);
  rpc UpdateNote(UpdateNoteRequest) returns (UpdateNoteResponse);
  rpc DeleteNote(DeleteNoteRequest) returns (DeleteNoteResponse);
}

message NoteParams {
  string title = 1;
  string text = 2;
  string author = 3;
}

message CreateNoteRequest {
    NoteParams note = 1;
}

message CreateNoteResponse {
  int64 id = 1;
}

message GetNoteRequest {
 int64 id = 1;
}

message GetNoteResponse {
  int64 id = 1;
  NoteParams note = 2;
}

message GetListNoteRequest {
  int64 limit = 1;
}

message GetListNoteResponse {
  repeated NoteParams notes = 1;
}

message UpdateNoteRequest {
  int64 id = 1;
}

message UpdateNoteResponse {
  int64 id = 1;
  bool status = 2;
}

message DeleteNoteRequest {
  int64 id = 1;
}

message DeleteNoteResponse {
  int64 id = 1;
  bool status = 2;
}